--- a/KitchenSync/package.json
+++ b/KitchenSync/package.json
@@ -27,6 +27,7 @@
     "expo-blur": "~14.0.3",
     "expo-camera": "^16.0.15",
     "expo-constants": "~17.0.5",
+    "expo-file-system": "^18.0.12",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image": "^2.0.4",
